# ai-security-scanner

./: .ai-security-scanner.yml.example  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  SECURITY.md  alembic.ini  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_memory_fixes.py
.github/: dependabot.yml
.github/actions/security-scan/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci.yml
ai_security_scanner/: __init__.py  exceptions.py
ai_security_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_security_scanner/cli/: __init__.py  main.py
ai_security_scanner/core/: __init__.py  config.py  models.py  scanner.py
ai_security_scanner/core/llm/: __init__.py  analyzer.py  cost_tracker.py  providers.py
ai_security_scanner/core/patterns/: __init__.py  base.py  owasp_top10.py
ai_security_scanner/database/: __init__.py  connection.py  repository.py  service.py
ai_security_scanner/database/migrations/: env.py
ai_security_scanner/database/migrations/versions/: 001_initial_schema.py
ai_security_scanner/database/models/: __init__.py  scan_history.py
ai_security_scanner/integrations/: __init__.py
ai_security_scanner/integrations/github/: __init__.py  integration.py
ai_security_scanner/integrations/sarif/: __init__.py  exporter.py
ai_security_scanner/models/: __init__.py
ai_security_scanner/models/embeddings/: __init__.py  codebert.py
ai_security_scanner/services/: __init__.py  file_service.py  pattern_service.py  scan_service.py  statistics_service.py
ai_security_scanner/utils/: __init__.py  file_utils.py  language_detector.py  logging.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: DATABASE.md
examples/: memory_leak_demo.py  vulnerable_code.js  vulnerable_code.py
tests/: __init__.py  test_config_access.py  test_config_validation.py  test_database.py  test_memory_leaks.py  test_scanner.py  test_services.py
tests/functional/: test_cli.py
tests/unit/integrations/: test_github_integration.py  test_sarif_exporter.py
tests/unit/patterns/: test_owasp_patterns.py
